src/test/tests/other/sample/semanticErr.wacc
# Output:
# #semantic_error#

# Exit:
# 200

begin
  int a = 'h'
end